--- a/views/main-en/includes/footer.ejs
+++ b/views/main-en/includes/footer.ejs
@@ -28,7 +28,7 @@
                                     class="ti-linkedin"></span></a></li>
                     </ul>
                 </div>
-                <div class="col-lg-12 text-lg-center" style="border-top: 2px solid #fff; margin-top: 20px;">
+                <div class="col-lg-12 text-lg-center py-2" style="border-top: 2px solid #fff; margin-top: 20px;">
                     <p class="footer-text m-0" style="white-space: normal;">
                         Copyright &copy;
                         <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed
