--- a/views/main-ar/includes/head.ejs
+++ b/views/main-ar/includes/head.ejs
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="ar">
+<html lang="AR">
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Elmassa Consult</title>
     <link rel="icon" href="/main/img/logo.png">
     <!-- Bootstrap CSS -->
@@ -55,6 +56,7 @@
                                         <li><a href="/about">من نحن</a></li>
                                         <li><a href="/service">خدماتنا</a></li>
                                         <li><a href="/projects">مشاريعنا</a></li>
+                                        <li><a href="/blogs">المقالات</a></li>
                                         <li><a href="/contact">اتصل بنا</a></li>
                                     </ul>
                                 </div>
