--- a/views/main-en/project.ejs
+++ b/views/main-en/project.ejs
@@ -28,7 +28,7 @@
             </div>
             <div class="row">
                 <%projects.forEach(p=>{ %>
-                    <div class="col-lg-3">
+                    <div class="col-lg-4 mb-4">
                         <div class="card" style="width: 100%">
                             <img src="<%=p.imgs[0]%>" class="card-img-top" alt="...">
                             <div class="card-body">
