--- a/views/main-ar/contact.ejs
+++ b/views/main-ar/contact.ejs
@@ -93,19 +93,25 @@
                <div class="media contact-info">
                   <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                   <div class="media-body">
-                     <h3>+20 111 012 2100</h3>
+                     <a href="tel:+201110122100">
+                        <h3>+20 111 012 2100</h3>
+                     </a>
                   </div>
                </div>
                <div class="media contact-info">
                   <span class="contact-info__icon"><i class="ti-comments"></i></span>
                   <div class="media-body">
-                     <h3>+20 100 060 7536</h3>
+                     <a href="https://api.whatsapp.com/send?phone=1110122100">
+                        <h3>+20 100 060 7536</h3>
+                     </a>
                   </div>
                </div>
                <div class="media contact-info">
                   <span class="contact-info__icon"><i class="ti-email"></i></span>
                   <div class="media-body">
-                     <h3>info@elmassaconsult.com</h3>
+                     <a href="mailto:info@elmassaconsult.com">
+                        <h3>info@elmassaconsult.com</h3>
+                     </a>
                      <p>Send us your query anytime!</p>
                   </div>
                </div>
